($Id: ChangeLog,v 1.48 2001-06-18 13:50:06 rufustfirefly Exp $)

2001-06-18  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, etc/uams/Makefile.am,
	etc/uams/uams_krb4/Makefile.am: patch #433952 from Sebastian
	Rittau to move UAM authentication to use libtool

	* configure.in, bin/afppasswd/Makefile.am, config/Makefile.am,
	contrib/shell_utils/Makefile.am, distrib/initscripts/Makefile.am,
	etc/afpd/Makefile.am, etc/afpd/nls/Makefile.am,
	etc/atalkd/Makefile.am, etc/papd/Makefile.am,
	man/man5/Makefile.am, man/man8/Makefile.am: patch #433906
	to move to pkgconfdir for package config files (Sebastian Rittau)

	* configure.in: fixed error that caused --with-did not to function
	properly

2001-06-13  Sam Noble <ns@shadow.org>
	* etc/papd/{printcap,ppd,lp,file,comment}.h:
	added #include <sys/cdefs.h> to these headers so that __P gets
	properly defined on platforms like TRU64

2001-06-11  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, include/atalk/adouble.h, libatalk/compat/flock.c:
	patch #431859 to avoid ucbinclude on Solaris, with flock support,
	thanks to Russ Allbery (rra@users.sourceforge.net)

	* acconfig.h, configure.in, libatalk/util/server_child.c,
	libatalk/util/server_lock.c, sys/netatalk/endian.h: patch #432052
	for portability to IRIX, HP-UX, and AIX (Russ Allbery)

	* etc/afpd/nls/makecode.c: patch #432137 to add codepage mapping
	support for (C), (TM) and other characters to avoid losing them,
	submitted by Andre Schild (aschild@users.sourceforge.net)

	* configure.in: set sysconfdir as /etc/netatalk by default, and
	uams path now pulls from sysconfdir instead of config_dir
	(Sam Noble)

2001-06-07  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, bin/afppasswd/Makefile.am,
	contrib/shell_utils/Makefile.am, distrib/initscripts/Makefile.am,
	etc/afpd/Makefile.am, etc/afpd/nls/Makefile.am,
	etc/atalkd/Makefile.am, etc/papd/Makefile.am,
	man/man5/Makefile, man/man8/Makefile.am: patch #422872 from