@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.89 2001-06-19 17:03:26 srittau Exp $
+dnl $Id: configure.in,v 1.90 2001-06-19 18:04:39 rufustfirefly Exp $
 dnl configure.in for netatalk
 
 AC_INIT(bin/adv1tov2/adv1tov2.c)
@@ -85,7 +85,7 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(fcntl.h limits.h stdint.h strings.h sys/fcntl.h sys/file.h sys/ioctl.h sys/time.h sys/mnttab.h sys/statvfs.h sys/stat.h sys/vfs.h mntent.h syslog.h unistd.h termios.h sys/termios.h netdb.h sgtty.h ufs/quota.h mount.h sys/mount.h statfs.h)
+AC_CHECK_HEADERS(fcntl.h limits.h stdint.h strings.h sys/fcntl.h sys/file.h sys/ioctl.h sys/time.h sys/mnttab.h sys/statvfs.h sys/stat.h sys/vfs.h mntent.h syslog.h unistd.h termios.h sys/termios.h netdb.h sgtty.h ufs/quota.h mount.h sys/mount.h statfs.h sys/types.h)
 AC_CHECK_HEADER(sys/cdefs.h,,
 	AC_MSG_RESULT([enabling generic cdefs.h from tree])
 	CFLAGS="-I\$(top_srcdir)/sys/generic $CFLAGS"
@@ -264,17 +264,18 @@ AC_CHECK_LIB(pam, pam_start,
 	LIBS="$LIBS -lpam"
 	compile_pam=yes
 )
-AM_CONDITIONAL(BUILD_PAM, test x$compile_pam = xyes)
 
 AC_ARG_WITH(pam,
-	[  --with-pam              enable password authentication modules support],
-	if test "x$compile_pam" = "xyes"; then
-		use_pam_so=yes
-		AC_MSG_RESULT([enabling pam modules support])
-	else
-		AC_MSG_RESULT([pam libraries not found. Disabling pam modules support])
-	fi
+	[  --without-pam           disable password authentication modules support],
+	compile_pam=no
+	use_pam_so=no
+	AC_DEFINE(USE_PAM, 0)
+	AC_MSG_RESULT([Disabling pam modules support])
 )
+if test "x$compile_pam" = "xyes"; then
+	use_pam_so=yes
+	AC_MSG_RESULT([Enabling pam modules support])
+fi
 
 shadowpw=no
 AC_ARG_WITH(shadow,
@@ -428,6 +429,7 @@ if test x"$this_os" = "xfreebsd"; then
 
 	dnl ----- Set -shared flag
 	LDSHAREDFLAGS="-shared"
+	AC_DEFINE(NO_CRYPT_H, 1)
 fi
 
 dnl ----- HP-UX 11 specific -----
@@ -636,6 +638,7 @@ AM_CONDITIONAL(USE_DHX, test x$compile_dhx = xyes)
 AM_CONDITIONAL(USE_KERBEROS, test x$compile_kerberos = xyes)
 AM_CONDITIONAL(USE_PAM_SO, test x$use_pam_so = xyes)
 AM_CONDITIONAL(USE_PAM, test x$compile_pam = xyes)
+AM_CONDITIONAL(BUILD_PAM, test x$compile_pam = xyes)
 AM_CONDITIONAL(USE_PGP, test x$compile_pgp = xyes)
 AM_CONDITIONAL(USE_COBALT, test x$sysv_style = xcobalt)
 AM_CONDITIONAL(USE_REDHAT, test x$sysv_style = xredhat)
